Menambahkan operasi perkalian

--- a/calculator.ipynb
+++ b/calculator.ipynb
@@ -20,6 +20,7 @@
     "def kalkulator():\n",
     "    print(\"1. Tambah (+)\")\n",
     "    print(\"2. Kurang (-)\")\n",
+    "    print(\"3. Kali (*)\")\n",
     "    \n",
     "    pilihan = input(\"Pilih operasi (1/2): \")\n",
     "\n",
