Menambahkan operasi perkalian

--- a/calculator.ipynb
+++ b/calculator.ipynb
@@ -24,7 +24,7 @@
     "    \n",
     "    pilihan = input(\"Pilih operasi (1/2): \")\n",
     "\n",
-    "    if pilihan in ['1', '2']:\n",
+    "    if pilihan in ['1', '2','3']:\n",
     "        try:\n",
     "            angka1 = float(input(\"Masukkan angka pertama: \"))\n",
     "            angka2 = float(input(\"Masukkan angka kedua: \"))\n",
@@ -32,9 +32,12 @@
     "            if pilihan == '1':\n",
     "                hasil = angka1 + angka2\n",
     "                operasi = '+'\n",
-    "            else:\n",
+    "            elif pilihan == '2':\n",
     "                hasil = angka1 - angka2\n",
     "                operasi = '-'\n",
+    "            else:\n",
+    "                hasil = angka1 * angka2\n",
+    "                operasi = '*'\n",
     "\n",
     "            print(f\"Hasil: {angka1} {operasi} {angka2} = {hasil}\")\n",
     "        except ValueError:\n",
